internal/test/testdata/fuzz/crashers/9df3d02176772e30055fa904606973b24f8a131e.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x40 pc=0x130617e]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInsert(0xc000201060, 0xc0002094a0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, ...)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:129 +0x10e
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc000201060, 0xc00021a600, 0x100e4d8, 0x20, 0x13f9c00, 0xc00021a601)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:98 +0x126
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc000201060, 0xc00021a600, 0x0, 0x14b9700, 0xc000201060, 0x1)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:35 +0x54
github.com/tomarrell/lbadd/internal/test.Fuzz(0x9010000, 0x10, 0x10, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/test/lbadd_fuzz.go:41 +0x383
go-fuzz-dep.Main(0xc00016bf70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/test/go.fuzz.main/main.go:15 +0x52
exit status 2